--- a/day 2 - Hello World/style.css
+++ b/day 2 - Hello World/style.css
@@ -13,7 +13,7 @@ body {
 .wrapper {
   width: 100%;
   height: 100vh;
-  padding-top: 50%;
+  padding-top: 80px;
   background: gray;
   display: flex;
   justify-content: center;
