--- a/day 2 - Hello World/style.css
+++ b/day 2 - Hello World/style.css
@@ -7,33 +7,45 @@
 html,
 body {
   font-family: 'Press Start 2P', cursive;
+  /* font-family: 'Anonymous Pro', sans-serif; */
+
   color: aliceblue;
+  background: url(matrix_bg.svg);
 }
 
 .wrapper {
   width: 100%;
   height: 100vh;
-  padding-top: 80px;
-  background: gray;
+
+  background-color: rgba(39, 76, 2, 0.2);
+
   display: flex;
   justify-content: center;
 }
 
-h1 {
-  font-size: 48px;
-}
-
 .type-effect h1 {
-  overflow: hidden;
-  border-right: 8px solid green;
-  white-space: nowrap;
-  margin-inline: auto;
-  letter-spacing: 1.8px;
+  position: relative;
+  top: 290px;
 
-  animation: typeEffect 2.5s steps(20, end), cursorBlink 0.75s step-end infinite;
+  font-size: clamp(1.25rem, -0.875rem + 8.333vw, 3.5rem);
+  letter-spacing: 1.8px;
+  white-space: nowrap;
+
+  /* color: #33fe00; */
+  color: #8dda0a;
+  text-shadow: 4px 6px #274c02;
+
+  border-right: 18px solid green;
+
+  overflow: hidden;
+
+  margin-inline: auto;
+
+  animation: typeEffect 2.5s steps(24, end), cursorBlink 0.75s step-end infinite;
 }
 
 /* Animation */
+/* typing  */
 @keyframes typeEffect {
   from {
     width: 0;
