--- a/day 2 - Hello World/style.css
+++ b/day 2 - Hello World/style.css
@@ -16,8 +16,10 @@ body {
 .wrapper {
   width: 100%;
   height: 100vh;
-
+  
   background-color: rgba(39, 76, 2, 0.2);
+
+  padding: 2px;
 
   display: flex;
   justify-content: center;
