--- a/day-4-calculator/styles.css
+++ b/day-4-calculator/styles.css
@@ -16,7 +16,7 @@ body {
 }
 
 .title {
-  margin-top: 5%;
+  margin-top: 60px;
 
   text-align: center;
 
@@ -77,7 +77,7 @@ button {
   color: #524948;
   text-shadow: 0 1px rgba(255, 255, 255, 0.4);
 
-  height: 6rem;
+  height: 7rem;
 
   background-color: #fff;
 
@@ -173,5 +173,9 @@ button:hover {
   .calculator {
     top: 58%;
     width: 35rem;
+  }
+
+  button {
+    height: 6rem;
   }
 }
