--- a/day-5-404/style.css
+++ b/day-5-404/style.css
@@ -151,7 +151,7 @@ svg#freepik_stories-cat-astronaut.animated #freepik--Planet--inject-31 {
   }
 
   .text {
-    margin-top: -1rem;
+    margin-top: -.8rem;
   }
 
   .text .title {
