--- a/day-8-theme-switcher/styles.css
+++ b/day-8-theme-switcher/styles.css
@@ -10,9 +10,33 @@
 
 body {
   font-size: 1.6rem;
+  font-family: 'Poppins';
+
   width: 100vw;
   background-color: #f1f1f1;
   transition: all ease-in-out 0.3s;
+}
+
+/* Theme */
+
+.dark {
+  background-color: #121212;
+  color: aliceblue;
+
+}
+
+.neon {
+  border: 0.2rem solid #fff;
+  /* border-radius: 2rem; */
+  padding: 0.4rem;
+  box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #bc13fe,
+    0 0 0.8rem #bc13fe, 0 0 2.8rem #bc13fe, inset 0 0 1.3rem #bc13fe;
+
+  color: #fff;
+  text-shadow: 0 0 0.7rem #fff, 0 0 1rem #fff, 0 0 2.1rem #fff,
+    0 0 4.2rem #bc13fe, 0 0 8.2rem #bc13fe, 0 0 9.2rem #bc13fe,
+    0 0 10rem #bc13fe, 0 0 15rem #bc13fe;
+  animation: 1.5s alternate infinite pulse;
 }
 
 /* Switch Button */
@@ -32,7 +56,6 @@ body {
 
 .title {
   font-size: clamp(3.6rem, 1.2885rem + 4.1026vw, 6rem);
-  font-family: 'Poppins';
   color: #121212;
   transition: all ease-in-out 0.5s;
   border: 0.2rem transparent;
@@ -64,7 +87,6 @@ body {
   bottom: 0;
   left: 0;
 
-
   border: solid transparent;
 
   background-color: black;
@@ -82,8 +104,8 @@ body {
 
   width: 2.6rem;
   height: 2.6rem;
-  left: -.2rem;
-  bottom: .1rem;
+  left: -0.2rem;
+  bottom: 0.1rem;
 
   background-color: #f1f1f1;
 
@@ -113,34 +135,58 @@ input:checked + .slider::before {
   border-radius: 50%;
 }
 
-/* Theme */
-
-.dark {
-  background-color: #121212;
-  /* color: aliceblue; */
+.goBack a {
+  text-decoration: none;
+  color: inherit;
+  /* transition: all ease-in 0.3s; */
 }
 
-.neon {
-  border: 0.2rem solid #fff;
-  /* border-radius: 2rem; */
-  padding: 0.4rem;
-  box-shadow: 0 0 0.2rem #fff, 0 0 0.2rem #fff, 0 0 2rem #bc13fe,
-    0 0 0.8rem #bc13fe, 0 0 2.8rem #bc13fe, inset 0 0 1.3rem #bc13fe;
+.goBack {
+  position: relative;
 
-  color: #fff;
-  text-shadow: 0 0 .7rem #fff, 0 0 1rem #fff, 0 0 2.1rem #fff, 0 0 4.2rem #bc13fe,
-    0 0 8.2rem #bc13fe, 0 0 9.2rem #bc13fe, 0 0 10rem #bc13fe, 0 0 15rem #bc13fe;
-  animation: 1.5s alternate infinite pulse;
+  margin-top: 2rem;
+
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  gap: 4px;
+
+  cursor: pointer;
+}
+
+.goBack::before {
+  content: '';
+
+  position: absolute;
+  left: 0;
+  bottom: 0;
+
+  width: 95%;
+  height: 4px;
+
+  border-radius: 4px;
+
+  background-color: #121212;
+
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
+
+.goBack:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
 }
 
 /* Neon Animation */
 @keyframes pulse {
   100% {
-    text-shadow: 0 0 .4rem #fff, 0 0 1rem #fff, 0 0 2rem #fff, 0 0 4rem #bc13fe,
+    text-shadow: 0 0 0.4rem #fff, 0 0 1rem #fff, 0 0 2rem #fff, 0 0 4rem #bc13fe,
       0 0 8rem #bc13fe, 0 0 9rem #bc13fe, 0 0 10rem #bc13fe, 0 0 15rem #bc13fe;
   }
   0% {
-    text-shadow: 0 0 .2rem #fff, 0 0 .4rem #fff, 0 0 .6rem #fff, 0 0 1rem #bc13fe,
-      0 0 4.5rem #bc13fe, 0 0 55rem #bc13fe, 0 0 7rem #bc13fe, 0 0 8rem #bc13fe;
+    text-shadow: 0 0 0.2rem #fff, 0 0 0.4rem #fff, 0 0 0.6rem #fff,
+      0 0 1rem #bc13fe, 0 0 4.5rem #bc13fe, 0 0 55rem #bc13fe, 0 0 7rem #bc13fe,
+      0 0 8rem #bc13fe;
   }
 }
