--- a/day-11-login-form/css/style.css
+++ b/day-11-login-form/css/style.css
@@ -21,65 +21,125 @@ img {
 :root {
   --ffamily: 'Poppins', sans-serif;
   --ffamily2: 'Inter', sans-serif;
+  --clr-main-bg: #e5e5e5;
+  --clr-accent: #838cf1;
+  --clr-primary-main: #656ed3;
+  --clr-primary-font: #121212;
+  --clr-secondary-font: #afb3ff;
+
   font-size: 62.5%;
 }
 
 body {
   width: 100vw;
   height: 100vh;
+
   font-size: 1.6rem;
   font-family: var(--ffamily2);
-  background-color: beige;
+  color: var(--clr-primary-font);
+
+  background-color: var(--clr-main-bg);
+
+  overflow: hidden;
 }
 
 .wrapper {
+  position: relative;
   /* max-width: 1140px; */
   width: 100%;
   height: 100vh;
+
   margin-inline: auto;
+
   display: flex;
-  gap: ;
+  /* gap: ; */
 }
 
 .login-container {
   width: 100%;
   padding-top: 15%;
+
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
+.login-container h1 {
+  font-size: 2.4rem;
+  font-weight: 900;
+}
+
+/* ---- Login Form ---- */
+
 .login--form {
+  margin-top: 3.6rem;
+
   display: flex;
   flex-direction: column;
 }
 
 .login--form label {
   margin-top: 1.2rem;
+
   display: flex;
   flex-direction: column;
 }
 
 .login--form input {
   font-family: var(--ffamily2);
-  margin-top: 1.2rem;
-  width: 36rem;
-  padding: .4rem;
-  border-radius: 2.5rem;
-}
+  font-size: 1.4rem;
 
+  width: 36rem;
+
+  margin-top: 1.2rem;
+
+  padding: 0.8rem;
+
+  border: 0.1rem solid;
+  border-radius: 2.5rem;
+
+  background: transparent;
+}
 
 .login--form button {
   font-family: var(--ffamily2);
+  font-size: 1.6rem;
+  color: var(--clr-secondary-font);
+
   width: 100%;
+
+  padding: 1rem;
+
   margin-top: 4.2rem;
-  padding: .7rem;
+
+  border: none;
   border-radius: 2.5rem;
+  background-color: var(--clr-primary-main);
+
+  box-shadow: -2px -6px;
+
+  transition: all ease-in 0.3s;
+
   cursor: pointer;
 }
 
-.login-container h3{
+.login--form button:hover {
+  color: var(--clr-main-bg);
+  background-color: var(--clr-accent);
+  box-shadow: -2px -6px var(--clr-primary-main);
+}
+
+/* ---- Footer form ---- */
+
+.login-container h3 {
+  font-size: 1.6rem;
+
   margin-top: 5.4rem;
+}
+
+.login-container h3 a {
+  text-decoration: underline;
+  text-decoration-skip-ink: auto;
 }
 
 .social--links {
@@ -88,21 +148,90 @@ body {
   gap: 1.6rem;
 }
 
-.social--links li a i{
+.social--links li a i {
   font-size: 3.2rem;
+  color: var(--clr-primary-main);
 }
+
+/* ---- Retangulo ---- */
+
+.rectangle {
+  position: absolute;
+  left: -25rem;
+  bottom: -2rem;
+
+  width: 55rem;
+  height: 15rem;
+
+  background: var(--clr-primary-main);
+
+  border-radius: 10rem;
+
+  transform: rotate(-45deg);
+
+  box-shadow: 2px -16px var(--clr-accent);
+}
+
+/* ---- Side Image ---- */
 
 .image-container {
   position: relative;
+
   width: 75%;
+
   padding-top: 25%;
-  background-color: aquamarine;
+
+  background-color: rgba(175, 179, 255, 1);
 }
 
 .image-container img {
   position: absolute;
+
   left: -25rem;
   top: 18rem;
-  width: 60rem;  
-  height: 59rem;  
+
+  width: 60rem;
+  height: 59rem;
+}
+
+@media screen and (max-width: 480px) {
+  .login-container {
+    padding-top: 25%;
+  }
+  .rectangle {
+    z-index: -1;
+    left: 10rem;
+    top: -10rem;
+
+    transform: rotate(135deg) scale(0.8);
+    opacity: 0.8;
+  }
+  .image-container {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 480px) and (max-width: 1279px) {
+  .login-container {
+    padding-top: 25%;
+  }
+  .rectangle {
+    z-index: -1;
+    left: 50rem;
+    top: -10rem;
+
+    transform: rotate(135deg);
+    opacity: 0.8;
+  }
+  .image-container {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1280px) and (max-width: 1139px) {
+  .image-container img {
+    left: -15rem;
+    width: 45rem;
+    height: 45rem;
+  }
 }
