refac: correcting mobile reponsiveness

--- a/day-12-image-gallery/css/style.css
+++ b/day-12-image-gallery/css/style.css
@@ -26,7 +26,7 @@ body {
   color: #f1f1f1;
 
   background-color: var(--clr-background);
-  
+
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -201,5 +201,27 @@ body {
   .gallery {
     flex-direction: column;
     align-items: center;
+  }
+
+  .card {
+    width: 350px;
+    height: 550px;
+  }
+
+  .card:focus {
+    box-shadow: 0px 35px 75px -15px rgba(150, 115, 2, 0.6);
+    transform: scale(1.05);
+  }
+  
+  .card:focus img {
+    opacity: 0.2;
+  }
+
+  .card:focus .content {
+    opacity: 1;
+  }
+
+  .card:focus .text-animation {
+    transform: translateX(0);
   }
 }
