--- a/style.css
+++ b/style.css
@@ -4,81 +4,188 @@
   box-sizing: border-box;
 }
 
-ul li {
-  margin-top: 8px;
-  list-style: none;
+:root {
+  font-size: 10px;
 }
 
 a {
-  position: relative;
+  color: inherit;
   text-decoration: none;
-  color: #fffffe;
 }
 
-a::before {
+i {
+  font-size: 5rem;
+}
+
+ul {
+  list-style: none;
+}
+
+body {
+  width: 100vw;
+  font-size: 1.6rem;
+  font-family: sans-serif;
+  color: aliceblue;
+  /* background: #000
+    url(https://www.myfreewalls.com/public/uploads/preview/hd-dark-abstract-gaming-color-mobile-wallpaper-11631140632fnxjwka8sf.jpg); */
+  background: #000 url(wallpaperbetter.jpg);
+  background-size: cover;
+
+  overflow-x: hidden;
+}
+
+header {
+  margin-inline: auto;
+
+  /* background: blueviolet; */
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.mobile-toggle {
+  display: none;
+  background: transparent;
+  border: none;
+  color: inherit;
+  cursor: pointer;
+}
+
+.logo {
+  margin: 2rem;
+  text-shadow: 0 0 0.7rem #fff, 0 0 1rem #fff, 0 0 2.1rem #fff,
+    0 0 4.2rem #bc13fe, 0 0 8.2rem #bc13fe, 0 0 9.2rem #bc13fe,
+    0 0 10rem #bc13fe, 0 0 15rem #bc13fe;
+}
+
+.nav {
+  display: flex;
+}
+
+.nav-menu {
+  text-transform: uppercase;
+  position: relative;
+  /* margin-inline: 4rem; */
+
+  background: hsl(271 76% 53% / 0.2);
+  backdrop-filter: blur(1rem);
+
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+.nav-menu li {
+  margin: 2.4rem;
+  margin-right: 4rem;
+  cursor: pointer;
+}
+
+.nav-menu li::before {
   content: '';
-
   position: absolute;
-  left: 0;
-  bottom: 0;
+  bottom: 0.2rem;
 
-  width: 100%;
-  height: 4px;
+  width: 15%;
+  height: 0.2rem;
 
-  border-radius: 4px;
-
-  background-color: #fffffe;
+  background-color: burlywood;
 
   transform-origin: right;
   transform: scaleX(0);
-  transition: transform .3s ease-in-out;
+  transition: transform 0.3s ease-in-out;
 }
 
-a:hover::before {
+.nav-menu li:hover::before {
   transform-origin: left;
   transform: scaleX(1);
 }
 
-body {
-  width: 100%;
-  height: 100vh;
-
-  font-family: 'Poppins', sans-serif;
-
-  background: #301e4e;
-}
-
-.wrapper {
-  max-width: 1140px;
-  height: 100vh;
-  color: #fffffe;
-  margin-inline: auto;
-}
-
-.header {
-  background: #463366;
-  border-bottom-left-radius: 25px;
-  border-bottom-right-radius: 25px;
-  box-shadow: 0px 1px 6px #cabae2;
-
-  text-align: center;
-
-  padding: 8px;
-
+/*  */
+.content {
+  margin: 2rem;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
 }
 
-h1 {
-  font-size: 32px;
-  color: #cabae2;
-  text-shadow: 2px 6px #301e4e;
-  font-family: 'Permanent Marker', cursive;
-}
-
-.list-container {
-  margin-top: 32px;
-  text-align: center;
+.cards {
+  margin: 2rem;
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+  gap: 2rem;
+}
+
+.card {
+  width: 24rem;
+  padding: 2rem;
+  aspect-ratio: 1;
+
+  border: 1px solid;
+  border-radius: 2rem;
+  /* display: flex;
+  flex-direction: column;
+  gap: 2rem; */
+  display: grid;
+  grid-template-rows: 0.5fr 0.5fr 1fr 2rem;
+  row-gap: 1.6rem;
+  /* place-content: center; */
+}
+
+.card p {
+  /* margin-top: 2rem; */
+  /* margin-bottom: 2rem; */
+}
+
+.footer-card {
+  display: flex;
+  justify-content: space-between;
+}
+
+.card a {
+  color: #bc13fe;
+  font-weight: bold;
+  filter: brightness(1.3);
+  transition: all ease-in .3s;
+}
+
+.card a:hover {
+  text-shadow: 0 0 0.7rem #fff, 0 0 1rem #fff, 0 0 2.1rem #fff,
+    0 0 4.2rem #bc13fe, 0 0 8.2rem #bc13fe, 0 0 9.2rem #bc13fe,
+    0 0 10rem #bc13fe, 0 0 15rem #bc13fe;
+}
+
+@media (max-width: 768px) {
+  .nav-menu {
+    position: fixed;
+    z-index: 9;
+
+    inset: 0 0 0 30%;
+
+    padding: min(30vh, 10rem) 2rem;
+
+    flex-direction: column;
+    align-items: flex-start;
+
+    transform: translateX(100%);
+    transition: transform ease-in-out 0.3s;
+  }
+
+  .nav-menu[data-visible='true'] {
+    transform: translateX(0%);
+  }
+
+  .nav-menu li {
+    padding: 1.6rem;
+  }
+
+  .mobile-toggle {
+    display: block;
+    position: absolute;
+    z-index: 10;
+    right: 2rem;
+  }
 }
