--- a/day-13-responsive-menu/style.css
+++ b/day-13-responsive-menu/style.css
@@ -28,8 +28,7 @@ body {
   color: aliceblue;
   /* background: #000
     url(https://www.myfreewalls.com/public/uploads/preview/hd-dark-abstract-gaming-color-mobile-wallpaper-11631140632fnxjwka8sf.jpg); */
-  background: #000
-    url(wallpaperbetter.jpg);
+  background: #000 url(wallpaperbetter.jpg);
   background-size: cover;
 
   overflow-x: hidden;
@@ -55,6 +54,9 @@ header {
 
 .logo {
   margin: 2rem;
+  text-shadow: 0 0 0.7rem #fff, 0 0 1rem #fff, 0 0 2.1rem #fff,
+    0 0 4.2rem #bc13fe, 0 0 8.2rem #bc13fe, 0 0 9.2rem #bc13fe,
+    0 0 10rem #bc13fe, 0 0 15rem #bc13fe;
 }
 
 .nav {
@@ -63,6 +65,7 @@ header {
 
 .nav-menu {
   text-transform: uppercase;
+  position: relative;
   /* margin-inline: 4rem; */
 
   background: hsl(271 76% 53% / 0.2);
@@ -75,9 +78,85 @@ header {
 
 .nav-menu li {
   margin: 2.4rem;
+  margin-right: 4rem;
+  cursor: pointer;
 }
 
+.nav-menu li::before {
+  content: '';
+  position: absolute;
+  bottom: 0.2rem;
 
+  width: 15%;
+  height: 0.2rem;
+
+  background-color: burlywood;
+
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 0.3s ease-in-out;
+}
+
+.nav-menu li:hover::before {
+  transform-origin: left;
+  transform: scaleX(1);
+}
+
+/*  */
+.content {
+  margin: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* justify-content: center; */
+}
+
+.cards {
+  margin: 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.card {
+  width: 24rem;
+  padding: 2rem;
+  aspect-ratio: 1;
+
+  border: 1px solid;
+  border-radius: 2rem;
+  /* display: flex;
+  flex-direction: column;
+  gap: 2rem; */
+  display: grid;
+  grid-template-rows: 0.5fr 0.5fr 1fr 2rem;
+  row-gap: 1.6rem;
+  /* place-content: center; */
+}
+
+.card p {
+  /* margin-top: 2rem; */
+  /* margin-bottom: 2rem; */
+}
+
+.footer-card {
+  display: flex;
+  justify-content: space-between;
+}
+
+.card a {
+  color: #bc13fe;
+  font-weight: bold;
+  filter: brightness(1.3);
+  transition: all ease-in .3s;
+}
+
+.card a:hover {
+  text-shadow: 0 0 0.7rem #fff, 0 0 1rem #fff, 0 0 2.1rem #fff,
+    0 0 4.2rem #bc13fe, 0 0 8.2rem #bc13fe, 0 0 9.2rem #bc13fe,
+    0 0 10rem #bc13fe, 0 0 15rem #bc13fe;
+}
 
 @media (max-width: 768px) {
   .nav-menu {
