--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,6 +6,8 @@
 
 :root {
   font-size: 10px;
+  --ff-poppins: 'Poppins';
+  --ff-inter: 'Inter';
 }
 
 a {
@@ -24,7 +26,7 @@ ul {
 body {
   width: 100vw;
   font-size: 1.6rem;
-  font-family: sans-serif;
+  font-family: var(--ff-poppins);
   color: aliceblue;
   /* background: #000
     url(https://www.myfreewalls.com/public/uploads/preview/hd-dark-abstract-gaming-color-mobile-wallpaper-11631140632fnxjwka8sf.jpg); */
@@ -103,12 +105,34 @@ header {
 }
 
 /*  */
+.main {
+  /* max-width: 144rem; */
+
+  padding: 2rem;
+
+  margin-inline: auto;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .content {
   margin: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   /* justify-content: center; */
+}
+
+.content h1 {
+  font-size: 3.2rem;
+}
+
+.content h2 {
+  font-size: 1.8rem;
+  font-weight: 300;
+  text-align: center;
 }
 
 .cards {
@@ -136,8 +160,7 @@ header {
 }
 
 .card p {
-  /* margin-top: 2rem; */
-  /* margin-bottom: 2rem; */
+  font-family: var(--ff-inter);
 }
 
 .footer-card {
@@ -149,7 +172,7 @@ header {
   color: #bc13fe;
   font-weight: bold;
   filter: brightness(1.3);
-  transition: all ease-in .3s;
+  transition: all ease-in 0.3s;
 }
 
 .card a:hover {
@@ -187,5 +210,20 @@ header {
     position: absolute;
     z-index: 10;
     right: 2rem;
+  }
+
+  .card {
+    width: 100%;
+    height: 26rem;
+    max-width: width 90%;
+    padding: 2rem;
+    /* aspect-ratio: 1; */
+
+    border: 1px solid;
+    border-radius: 2rem;
+
+    display: grid;
+    grid-template-rows: 0.5fr 0.5fr 1fr 2rem;
+    row-gap: 1.6rem;
   }
 }
