--- a/projects/day-13-responsive-menu/style.css
+++ b/projects/day-13-responsive-menu/style.css
@@ -178,6 +178,12 @@ header {
     padding: 1rem;
   }
 
+  .nav-menu li:hover {
+    text-shadow: 0 0 0.7rem #fff, 0 0 1rem #fff, 0 0 2.1rem #fff,
+      0 0 4.2rem #bc13fe, 0 0 8.2rem #bc13fe, 0 0 9.2rem #bc13fe,
+      0 0 10rem #bc13fe, 0 0 15rem #bc13fe;
+  }
+
   .mobile-toggle {
     display: block;
     position: absolute;
