--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -214,10 +214,10 @@ header {
 
   .card {
     width: 100%;
-    height: 26rem;
+    /* height: 26rem; */
     max-width: width 90%;
     padding: 2rem;
-    /* aspect-ratio: 1; */
+    aspect-ratio: 32 / 10;
 
     border: 1px solid;
     border-radius: 2rem;
