--- a/projects/day-15-ecomerce/styles/style.css
+++ b/projects/day-15-ecomerce/styles/style.css
@@ -106,7 +106,9 @@ body {
   top: 35%;
   left: 25%;
 
-  width: 65rem;
+  max-width: 65rem;
+  min-width: 32.8rem;
+  /* width: 100%; */
 
   display: flex;
   flex-direction: column;
@@ -125,12 +127,21 @@ body {
   font-size: clamp(1.4rem, 0.6299rem + 1.0458vw, 2.2rem);
 }
 
-.cta button {
-  width: 10rem;
-  height: 4rem;
-
-  font-family: var(--fontfamily-heading);
+.cta a {
   font-size: clamp(1.4rem, 0.8137rem + 0.2614vw, 1.6rem);
+  font-family: var(--fontfamily-heading);
+  text-align: center;
+
+  width: 13rem;
+  /* height: 4rem; */
+
+  padding: 1.6rem;
+
+  background: #000;
+
+  /* border-radius: 2.5rem; */
+
+  cursor: pointer;
 }
 
 /* Product Sections */
@@ -154,7 +165,13 @@ body {
   justify-content: space-between;
 }
 
+.products--heading h2 {
+  font-size: clamp(2.2rem, 1.0686rem + 1.3072vw, 3.2rem);
+}
+
 .products--heading a {
+  font-size: clamp(1.4rem, 0.8137rem + 0.2614vw, 1.6rem);
+
   display: flex;
   align-items: center;
   gap: 1rem;
@@ -199,7 +216,7 @@ footer {
   padding: 6.4rem 15rem;
 
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   gap: 10rem;
 }
 
@@ -208,14 +225,16 @@ footer {
   gap: 10rem;
 }
 
-.list ul{
+.list ul {
   display: flex;
   flex-direction: column;
   gap: 2.4rem;
 }
 
 .contact-form {
-  width: 56rem;
+  width: 100%;
+  max-width: 56rem;
+  min-width: 32.8rem;
 }
 
 .contact-form fieldset {
@@ -246,6 +265,8 @@ footer {
   height: 4.8rem;
 
   margin-top: 0.8rem;
+
+  cursor: pointer;
 }
 
 .attribuition {
@@ -258,11 +279,53 @@ footer {
 
   display: flex;
   flex-direction: column;
-  gap: .4rem;
+  gap: 0.4rem;
 }
 
-@media (max-width: 768px){
+.attribuition a {
+  text-decoration: underline;
+  text-underline-offset: 0.3rem;
+}
+
+@media (min-width: 320px) and (max-width: 767px) {
   .cta {
     left: 2rem;
+  }
+
+  footer {
+    padding: 0 3.2rem;
+    flex-direction: column;
+    gap: 3.2rem;
+  }
+
+  .list {
+    flex-direction: column;
+    align-items: center;
+    gap: 1.6rem;
+  }
+
+  .list ul {
+    align-items: center;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1140px) {
+  .cta {
+    left: 2rem;
+  }
+
+  footer {
+    padding: 0 3.2rem;
+    align-items: flex-start;
+  }
+
+  .list {
+    flex-direction: column;
+    gap: 1.6rem;
+  }
+
+  .list ul {
+    width: 15rem;
+    gap: 1rem;
   }
 }
