--- a/projects/day-15-ecomerce/styles/style.css
+++ b/projects/day-15-ecomerce/styles/style.css
@@ -2,6 +2,22 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scrollbar-width: thin;
+  scrollbar-color: var(--clr-neon) #000;
+}
+
+*::-webkit-scrollbar {
+  width: 16px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #000;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #8f54a0;
+  border-radius: 10px;
+  border: 3px solid #000;
 }
 
 :root {
@@ -23,6 +39,11 @@ ul {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+img {
+  width: 100%;
+  height: 100%;
 }
 
 body {
@@ -51,6 +72,25 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
+
+.rocket {
+  font-size: 5.2rem !important;
+  text-shadow: 0 0 0.7rem #fff, 0 0 1rem #fff, 0 0 2.1rem #fff,
+    0 0 4.2rem var(--clr-neon), 0 0 8.2rem var(--clr-neon),
+    0 0 9.2rem var(--clr-neon), 0 0 10rem var(--clr-neon),
+    0 0 15rem var(--clr-neon);
+}
+
+.logo h1 span {
+  font-size: 4rem;
+  color: var(--clr-neon);
 }
 
 .search {
@@ -137,11 +177,17 @@ body {
 
   padding: 1.6rem;
 
-  background: #000;
+  background: var(--clr-neon);
 
   /* border-radius: 2.5rem; */
 
+  transition: all ease-in 0.2s;
+
   cursor: pointer;
+}
+
+.cta a:hover {
+  filter: brightness(1.2);
 }
 
 /* Product Sections */
@@ -175,6 +221,8 @@ body {
   display: flex;
   align-items: center;
   gap: 1rem;
+
+  transition: all ease-in 0.2s;
 }
 
 .products--heading a:hover {
@@ -191,6 +239,18 @@ body {
   overflow-x: auto;
 }
 
+.card--img {
+  width: 17.6rem;
+  height: 17.4rem;
+  object-fit: cover;
+
+  transition: all ease 0.3s;
+}
+
+.card--img:hover {
+  filter: drop-shadow(0px 0px 8px var(--clr-hover));
+}
+
 .card--info {
   font-family: var(--fontfamily-body);
 }
@@ -200,11 +260,14 @@ body {
 }
 
 .prod-link {
-  color: aquamarine;
+  color: var(--clr-neon);
+  filter: brightness(2);
+  transition: all ease-in 0.2s;
 }
 
 .prod-link:hover {
-  color: #bc13fe;
+  color: aquamarine;
+  filter: brightness(1);
 }
 
 /* Footer */
@@ -288,6 +351,11 @@ footer {
 }
 
 @media (min-width: 320px) and (max-width: 767px) {
+  .header {
+    flex-direction: column;
+    gap: 2rem;
+  }
+
   .cta {
     left: 2rem;
   }
