--- a/projects/day-17-keyboard-evt/css/style.css
+++ b/projects/day-17-keyboard-evt/css/style.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
 :root {
   font-size: 10px;
   --ffamily-main: 'Poppins';
@@ -22,44 +27,75 @@ body {
   background-size: cover;
 }
 
+/* Header */
+
+.header {
+  max-width: 114rem;
+  width: 100%;
+
+  margin: 4rem auto;
+
+  padding-inline: 4rem;
+
+  /* background: #c1c1c1; */
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
+
+.rocket {
+  font-size: 5.2rem !important;
+  text-shadow: 0 0 0.7rem #fff, 0 0 1rem #fff, 0 0 2.1rem #fff,
+    0 0 4.2rem var(--clr-neon), 0 0 8.2rem var(--clr-neon),
+    0 0 9.2rem var(--clr-neon), 0 0 10rem var(--clr-neon),
+    0 0 15rem var(--clr-neon);
+}
+
+.logo h1 span {
+  font-size: 4rem;
+  color: var(--clr-neon);
+}
+
 .main {
   max-width: 114rem;
-  min-width: 35rem;
+  min-width: 32rem;
   width: 100%;
 
   padding: 2rem;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  margin-inline: auto;
 }
 
 .main h1 {
-  font-size: 4rem;  
+  font-size: 4rem;
 }
 
 .teclas {
   max-width: 45rem;
-  min-width: 35rem;
+  min-width: 32rem;
 
   margin: 2rem auto;
   padding: 2rem;
 
-  border: 1px solid aliceblue;
+  border: .1rem solid aliceblue;
   border-radius: 2rem;
   background: hsl(271 76% 53% / 0.2);
-  backdrop-filter: blur(15px)
-;
-    
+  backdrop-filter: blur(15px);
 
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-areas: 
-    "q w e"
-    "a s d"
-    "z x c"
-    "space space space"
-  ;
+  grid-template-areas:
+    'q w e'
+    'a s d'
+    'z x c'
+    'space space space';
   justify-items: center;
   gap: 1.6rem;
 }
@@ -70,7 +106,7 @@ body {
 
   font-size: 2rem;
 
-  border: .1rem solid var(--clr-font-main);
+  border: 0.1rem solid var(--clr-font-main);
   border-radius: 2rem;
 
   display: flex;
@@ -78,17 +114,35 @@ body {
   justify-content: center;
 }
 
-.q{ grid-area: q;}
-.w{ grid-area: w;}
-.e{ grid-area: e;}
-.a{ grid-area: a;}
-.s{ grid-area: s;}
-.d{ grid-area: d;}
-.z{ grid-area: z;}
-.x{ grid-area: x;}
-.c{ grid-area: c;}
+.q {
+  grid-area: q;
+}
+.w {
+  grid-area: w;
+}
+.e {
+  grid-area: e;
+}
+.a {
+  grid-area: a;
+}
+.s {
+  grid-area: s;
+}
+.d {
+  grid-area: d;
+}
+.z {
+  grid-area: z;
+}
+.x {
+  grid-area: x;
+}
+.c {
+  grid-area: c;
+}
 
-.space{ 
+.space {
   width: 85%;
   height: 8rem;
   aspect-ratio: 0;
@@ -96,6 +150,6 @@ body {
 }
 
 .tecla.active {
-  border: .2rem solid yellow;
-  color: #ff0;
+  border: 0.2rem solid #f3003f;
+  color: #f3003f;
 }
