--- a/projects/day-18-password-gen/css/style.css
+++ b/projects/day-18-password-gen/css/style.css
@@ -72,31 +72,95 @@ body {
   padding: 2rem;
 
   margin-inline: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .main h1 {
   font-size: 4rem;
 }
 
+/*  */
+.btn-genpass {
+  color: inherit;
+  font-family: inherit;
+
+  width: 16rem;
+  height: 4rem;
+
+  border-radius: 2.5rem;
+  border: none;
+  background: transparent;
+
+  cursor: pointer;
+
+  transition: all ease-in-out 0.3s;
+}
+
+.btn-genpass:hover {
+  text-shadow: 0 0 0.7rem #fff, 0 0 1rem #fff, 0 0 2.1rem #fff,
+    0 0 4.2rem #bc13fe, 0 0 8.2rem #bc13fe, 0 0 9.2rem #bc13fe,
+    0 0 10rem #bc13fe, 0 0 15rem #bc13fe;
+}
 
 /* PSW block */
 
-.psw-output {
+.output-container {
   position: relative;
 
-  width: 20rem;
-  /* height: 2rem; */
+  margin-top: 2rem;
 
-  padding: .8rem;
+  width: 24rem;
+  height: 8rem;
+
+  padding: 0.8rem;
 
   text-align: center;
 
   border: 1px solid var(--clr-neon);
+
+  opacity: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.psw-output span {
+
+.output-container span {
   position: absolute;
-  top: .8rem;
-  right: 0;
+  top: 2.5rem;
+  right: 1rem;
   cursor: pointer;
+  transition: all ease-in-out 0.3s;
+}
+
+.output-container span:hover {
+  text-shadow: 0 0 0.7rem #fff, 0 0 1rem #fff, 0 0 2.1rem #fff,
+    0 0 4.2rem #bc13fe, 0 0 8.2rem #bc13fe, 0 0 9.2rem #bc13fe,
+    0 0 10rem #bc13fe, 0 0 15rem #bc13fe;
+}
+
+.loader {
+  position: absolute;
+  top: 23rem;
+
+  width: 6rem;
+  aspect-ratio: 1;
+
+  border: 1.6rem solid transparent;
+  border-top: 1.6rem solid var(--clr-hover);
+  border-bottom: 1.6rem solid var(--clr-neon);
+  border-radius: 50%;
+
+  opacity: 0;
+
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {transform: rotate(0deg);}
+  100% {transform: rotate(360deg)}
 }
