--- a/projects/day-19-unsplash-random/css/style.css
+++ b/projects/day-19-unsplash-random/css/style.css
@@ -27,3 +27,39 @@ body {
   background: #000 url(../images/wallpaperbetter.jpg);
   background-size: cover;
 }
+
+/* Header */
+
+.header {
+  max-width: 114rem;
+  width: 100%;
+
+  margin: 4rem auto;
+
+  padding-inline: 4rem;
+
+  /* background: #c1c1c1; */
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  gap: 0.8rem;
+}
+
+.rocket {
+  font-size: 5.2rem !important;
+  text-shadow: 0 0 0.7rem #fff, 0 0 1rem #fff, 0 0 2.1rem #fff,
+    0 0 4.2rem var(--clr-neon), 0 0 8.2rem var(--clr-neon),
+    0 0 9.2rem var(--clr-neon), 0 0 10rem var(--clr-neon),
+    0 0 15rem var(--clr-neon);
+}
+
+.logo h1 span {
+  font-size: 4rem;
+  color: var(--clr-neon);
+}
