--- a/projects/day-19-unsplash-random/css/style.css
+++ b/projects/day-19-unsplash-random/css/style.css
@@ -75,6 +75,26 @@ body {
   min-width: 32rem;
   width: 100%;
   margin: 4rem auto;
+  padding: 2rem;
+}
+
+.main h1 {
+  font-size: clamp(2.4rem, 1.2414rem + 1.1034vw, 3.2rem);
+}
+
+.main h2 {
+  font-size: 2rem;
+  font-weight: 300;
+  line-height: 2;
+
+  margin-left: 2%;
+}
+
+.button-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 1rem;
 }
 
 .btnGenImg {
@@ -88,15 +108,46 @@ body {
   border-radius: 5rem;
 
   cursor: pointer;
+  transition: all ease-in-out 0.3s;
 }
 
-.image-container {
-  width: 50rem;
+.btnGenImg:hover {
+  background: var(--clr-hover);
+  text-shadow: 0 0 0.7rem #fff, 0 0 1rem #fff, 0 0 2.1rem #fff,
+    0 0 4.2rem var(--clr-neon), 0 0 8.2rem var(--clr-neon),
+    0 0 9.2rem var(--clr-neon), 0 0 10rem var(--clr-neon),
+    0 0 15rem var(--clr-neon);
+}
+
+.btnGenImg:active {
+  filter: brightness(1.2);
+}
+
+.image-display {
+  max-width: 50rem;
+  min-width: 30rem;
+  width: 100%;
   aspect-ratio: 1;
 
   margin: 2rem auto;
 
   border: 1px solid;
+  border-radius: 2.5rem;
+
+  overflow: hidden;
 
   display: flex;
+  justify-content: center;
+}
+
+.placeholder {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.placeholder span {
+  font-size: 8rem;
+  margin-block: 2rem;
 }
