--- a/projects/day-20-emoji-picker/css/style.css
+++ b/projects/day-20-emoji-picker/css/style.css
@@ -25,7 +25,7 @@ body {
   font-size: 1.6rem;
 
   background: #000 url(../images/wallpaperbetter.jpg);
-  background-size: cover;
+  background-size: contain;
 }
 
 /* Header */
@@ -64,25 +64,48 @@ body {
   color: var(--clr-neon);
 }
 
+.main {
+  max-width: 114rem;
+  min-width: 35rem;
+  width: 100%;
+
+  margin: 0 auto;
+
+  padding: 2rem;
+}
+
+.instructions {
+  font-size: clamp(1.4rem, 0.5517rem + 1.3793vw, 2.4rem);
+  font-weight: 300;
+  text-align: center;
+}
+
 .emoji-render {
+  margin-top: 2rem;
   display: flex;
-  flex: wrap;
+  flex-direction: row;
+  flex-wrap: wrap;
   gap: 2rem;
 }
 
 .emoji-card {
   position: relative;
-  width: 16rem;
+  width: 12rem;
   aspect-ratio: 2/1;
+
+  margin: 0 auto;
 
   padding: .8rem;
   
   border: 1px solid;
   border-radius: 2rem;
 
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
+  display: grid;
+  grid-template-rows: 2fr 1fr;
+  justify-items: center;
 }
 
 .emoji-char {
@@ -92,7 +115,10 @@ body {
 
 .unicode-name {
   font-size: 1.2rem;
+  text-align: center;
 }
+
+/* Tooltip */
 
 .tooltip-text {
   position: absolute;
@@ -113,5 +139,5 @@ body {
 }
 
 .show {
-  display: none;
+  display: block;
 }
