--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -150,6 +150,19 @@ header {
   font-weight: 500;
 }
 
+.hero-info a {
+  font-weight: 700;
+  text-decoration: underline;
+  text-underline-offset: 0.4rem;
+  transition: all ease-in 0.2s;
+}
+
+.hero-info a:hover {
+  text-shadow: 0 0 0.7rem #fff, 0 0 1rem #fff, 0 0 2.1rem #fff,
+    0 0 4.2rem #bc13fe, 0 0 8.2rem #bc13fe, 0 0 9.2rem #bc13fe,
+    0 0 10rem #bc13fe, 0 0 15rem #bc13fe;
+}
+
 /* About */
 
 .about {
@@ -234,14 +247,11 @@ header {
   font-size: 1.4rem;
 }
 
-/* Main Section */
+/* Projects Section */
 
 .projects {
   width: 100%;
 
-  /* padding: 2rem; */
-
-  /* margin-inline: auto; */
   margin: 4rem auto;
 
   display: flex;
@@ -251,21 +261,19 @@ header {
 
 .projects-content {
   width: 80%;
-  margin: 2rem auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* justify-content: center; */
-}
 
-.projects-content h1 {
-  font-size: 3.2rem;
+  margin: 0 auto;
+
+  padding: 2rem;
 }
 
 .projects-content h2 {
-  font-size: 1.8rem;
+  font-size: 3.2rem;
+}
+
+.projects-content h3 {
+  font-size: clamp(1.4rem, 0.7457rem + 0.5517vw, 1.8rem);
   font-weight: 300;
-  text-align: center;
 }
 
 /* #21diasdecodigo Cards */
@@ -393,6 +401,11 @@ header {
   }
 
   /* 21diasdecodigo cards */
+
+  .projects-content {
+    width: 100%;
+  }
+
   .cards {
     width: 90%;
   }
