--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2,6 +2,22 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  scrollbar-width: thin;
+  scrollbar-color: var(--clr-neon) #000;
+}
+
+*::-webkit-scrollbar {
+  width: 16px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #000;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #8f54a0;
+  border-radius: 10px;
+  border: 3px solid #000;
 }
 
 :root {
@@ -358,12 +374,14 @@ header {
   gap: 2rem;
   align-items: center;
   justify-content: space-evenly;
-
-  transition: all ease-in 0.2s;
 }
 
 .social-links i {
   font-size: clamp(4rem, 1.2069rem + 5.5172vw, 8rem);
+}
+
+.social-links li {
+  transition: all ease-in 0.2s;
 }
 
 .social-links li:hover {
