--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -215,7 +215,7 @@ header {
   padding: 0.2rem;
 
   border-radius: 50%;
-  border: 0.2rem solid #bc13fe;
+  border: 0.4rem solid #9b1fcc;
 }
 
 .hero-info {
